--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "line-awesome": "^1.3.0",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.33",
     "tslib": "^2.3.0",
